# cloudipmanager

./: .gitignore  README.md  data.json  ipconfig  ipconfig.json  pyproject.toml  workspace.toml
.devcontainer/: devcontainer.json  postcreate.sh
components/cloudipmanager/c_add_address_space/: __init__.py  add_address_space.py  add_address_sub_space.py
components/cloudipmanager/c_add_ip_address/: __init__.py  add_ip_address.py
components/cloudipmanager/c_add_subnet/: __init__.py  add_subnet.py
components/cloudipmanager/c_address_range_to_cidr/: __init__.py  address_range_to_cidr.py
components/cloudipmanager/c_cidr_to_address_range/: __init__.py  cidr_to_address_range.py
components/cloudipmanager/c_database_operations/: __init__.py  add_to_database.py  delete_from_database.py  read_database.py  sort_database.py  structure_validation_database.py  update_database.py
components/cloudipmanager/c_db_connection/: __init__.py  db_connection.py
components/cloudipmanager/c_delete_address_subspace/: __init__.py
components/cloudipmanager/c_delete_ip_address/: __init__.py
components/cloudipmanager/c_delete_subnet/: __init__.py
components/cloudipmanager/c_initialize_address_space/: __init__.py  initialize_address_space.py
components/cloudipmanager/c_iptools/: __init__.py  address_space_number_free_addresses_calculator.py  address_space_to_size_calculator.py  sort_address_spaces_list.py
components/cloudipmanager/c_logger/: __init__.py  core.py  logger.py
components/cloudipmanager/c_skeleton/: __init__.py  default_global_variables.py  model.py
components/cloudipmanager/c_update_database/: __init__.py  update_database.py
components/cloudipmanager/c_update_tags/: __init__.py
test/components/cloudipmanager/c_add_address_space/: test_core.py
(+14 files in other folders)
