[tool.poetry]
name = "cloudipmanager"
version = "0.1.0"
description = "IP Address Manager for Public Clouds"
authors = ["Yarash Agarwal <yarash.agarwal@autostoresystem.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "cloudipmanager/c_initialize_address_space",from = "components"},
    {include = "cloudipmanager/c_logger",from = "components"},
    {include = "cloudipmanager/c_address_range_to_cidr",from = "components"},
    {include = "cloudipmanager/c_cidr_to_address_range",from = "components"},
    {include = "cloudipmanager/c_skeleton",from = "components"},
    {include = "cloudipmanager/c_add_address_space",from = "components"},
    {include = "cloudipmanager/c_add_subnet",from = "components"},
    {include = "cloudipmanager/c_update_tags",from = "components"},
    {include = "cloudipmanager/c_db_connection",from = "components"},
    {include = "cloudipmanager/c_database_operations",from = "components"},
    {include = "cloudipmanager/c_iptools",from = "components"},
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.4"
typer = "^0.12.3"
wily = "^1.25.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
